// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserTaskReducer deleteUserTask 1`] = `
Object {
  "allIds": Array [],
  "byId": Object {
    "A": Object {
      "createdAt": "2020-04-06T18:52:08.085Z",
      "id": "A",
      "points": 1,
      "relationId": "relationIdA",
      "taskId": "taskIdA",
      "userId": "userIdA",
    },
  },
}
`;

exports[`UserTaskReducer pushAllUserTasks 1`] = `
Object {
  "allIds": Array [
    "B",
    "C",
  ],
  "byId": Object {
    "B": Object {
      "createdAt": "2020-04-06",
      "id": "B",
      "points": 2,
      "relationId": "relationIdA",
      "taskId": "taskId1",
      "userId": "userIdA",
    },
    "C": Object {
      "createdAt": "2020-04-06",
      "id": "C",
      "points": 1,
      "relationId": "relationIdA",
      "taskId": "taskId1",
      "userId": "userIdB",
    },
  },
}
`;

exports[`UserTaskReducer pushUserTask 1`] = `
Object {
  "allIds": Array [
    "B",
    "A",
  ],
  "byId": Object {
    "A": Object {
      "createdAt": "2020-04-06T18:52:08.085Z",
      "id": "A",
      "points": 1,
      "relationId": "relationIdA",
      "taskId": "taskIdA",
      "userId": "userIdA",
    },
    "B": Object {
      "createdAt": "2020-04-06",
      "id": "B",
      "points": 1,
      "relationId": "relationIdA",
      "taskId": "taskId1",
      "userId": "userIdA",
    },
  },
}
`;
